--- a/como.html
+++ b/como.html
@@ -35,7 +35,7 @@
             <div class="passo-img-container">
                 <img class="passo-img" src="Passo2.png" />
             </div>
-            <p><b>3° Passo:</b> Clique em "Adicionar Arquivos" e adicione o arquivo baixado (extensão .xml).</p>
+            <p><b>3° Passo:</b> Clique em "Adiccionar Arquivos" e adicione o arquivo baixado (extensão .xml).</p>
             <div class="passo-img-container">
                 <img class="passo-img" src="Passo3.png" />
             </div>
